--- a/vision.html
+++ b/vision.html
@@ -128,7 +128,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 </div>
                 <div class="w3ls_single_left_grid1">
                          <div class="center">
-                    <img src="images/vision_pic.jpg" alt=" " class="img-responsive" />
+                    <img src="images/circles/Primary.jpg" alt=" " class="img-responsive" />
                     <br><br>
                         <strong>JCS - Vision and Mission</strong><br><br>At JCS we have a strong vision for the school, its students, parents and staff. This is supported by our mission statement and core values which form the very heart of our community.
                         <br><br>
